added new project

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs
+/AdsphereTestAutomation/.vs/AdsphereTestAutomation.slnx
+/AdsphereTestAutomation/obj
